2002-12-03 Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Added missing slash to display the incoming call
	icon thanks to tfing on IRC.
	
2002-12-02 Damien Sandras  <dsandras@seconix.com>

	* src/lid.cpp: Fixed bug (GDK thread lock not taken).
	
2002-12-02 Damien Sandras  <dsandras@seconix.com>

	* src/lid.cpp, src/lid.h: Added those files corresponding to the 
	Quicknet monitoring thread. GnomeMeeting is now able to use a real
	phone and its dialpad to dial numbers (* = . in IP addresses).
	The phone should behave like a real phone (on hook, off hook,
	calling, ...).
	
	* src/Makefile.am: Added the 2 previous files.
	
	* src/config.cpp: Changes consecutive to the introduction of lid.*
	
	* src/endpoint.cpp: See above.
	
	* src/endpoint.h: See above.
	
	* src/gnomemeeting.cpp: See above.
	
	* src/main_window.cpp: See above.
	
	* src/toolbar.cpp: See above.

	
2002-12-02 Damien Sandras  <dsandras@seconix.com>

	* src/videograbber.cpp: Added video device to the error message.
	
2002-12-01 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added support for POTS keypad.

	* src/main_window.cpp, src/main_window.h: Added function to be 
	able to support POTS keypad.
	
2002-12-01 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Removed unused widgets.
	
	* src/config.cpp: Fixed the menu notifiers.
	
	* src/main_window.cpp: Calls function to enable the micro as recording
	entry for all available mixers. Added a dialpad like in professional
	PC-to-Phone applications. Able to send key pressed as User Inputs
	and to add them into the callto URL at the right place.
	
	* src/menu.cpp: Removed the notification icon from view menu. 
	
	* src/sound_handling.cpp: Added function to enable the micro as
	recording entry for all available mixers.
	
	* src/tray.cpp: Always show the notification icon.

2002-11-30 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Select the mic as recording source.
