@@ -1929,6 +1929,7 @@ int main (int argc, char ** argv, char ** envp)
   gw->pref_window = NULL;
   gw->ldap_window = NULL;
   gw->incoming_call_popup = NULL;
+  gw->druid = NULL;
   gw->progress_timeout = 0;
   gw->cleaner_thread_count = 0;
 
